feat: add repro steps

--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "lint": "ng lint"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@teachablemachine/pose": "0.8.6",
+    "@tensorflow/tfjs": "2.8.6",
+    "electron-rebuild": "2.3.5"
+  },
   "devDependencies": {
     "@angular-builders/custom-webpack": "11.0.0",
     "@angular-devkit/build-angular": "0.1102.0",
